--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <a href="https://lemongdps.ps.fhgdps.com/tools/" class="button">Панель управления</a><br><br>
     <h1>Скачать</h1>
     <p>Чтобы скачать наш приватный сервер, нужно зайти в наш <strong>Дискорд-сервер :)</strong> А ещё ты можешь просто оценить людей, которые учавствовали в разработке GDPS.</p>
-    <a href="https://discord.gg/ez8FjkG9Ry" class="button">Дискорд-сервер &nbsp;<img class="button-logo" src="discord.svg" alt=":)"></a>
-    <a href="https://www.youtube.com/channel/UCzL73cvNPoGVrpSt7aEu5Gg" class="button">YouTube создателя&nbsp;<img class="button-logo" src="youtube.svg" alt=":)"></a>
+    <a href="https://discord.gg/ez8FjkG9Ry" class="button">Дискорд-сервер &nbsp;<img class="button-logo pon" src="discord.svg" alt=":)"></a>
+    <a href="https://www.youtube.com/channel/UCzL73cvNPoGVrpSt7aEu5Gg" class="button">YouTube создателя&nbsp;<img class="button-logo pon" src="youtube.svg" alt=":)"></a>
     <a href="credits.html" class="button">Другое...</a><br><br>
     <h3>Спасибо, что побывал на нашем сайте!</h3><br>
   </div>
